--- a/dailyfresh/templates/index.html
+++ b/dailyfresh/templates/index.html
@@ -6,11 +6,11 @@
         <div class="navbar">
             <h1 class="fl">全部商品分类</h1>
             <ul class="navlist fl">
-                <li><a href="">首页</a></li>
+                <li><a href="{% url 'goods:index' %}">首页</a></li>
                 <li class="interval">|</li>
-                <li><a href="">手机生鲜</a></li>
+                <li><a href="{% url 'goods:index' %}">手机生鲜</a></li>
                 <li class="interval">|</li>
-                <li><a href="">抽奖</a></li>
+                <li><a href="{% url 'goods:index' %}">抽奖</a></li>
             </ul>
         </div>
     </div>
