--- a/dailyfresh/templates/user_center_info.html
+++ b/dailyfresh/templates/user_center_info.html
@@ -6,11 +6,10 @@
             <h3>用户中心</h3>
             <ul>
                 <li><a href="{% url 'users:info' %}" class="active">· 个人信息</a></li>
-                <li><a href="{% url 'users:order' %}">· 全部订单</a></li>
+                <li><a href="{% url 'orders:order' %}">· 全部订单</a></li>
                 <li><a href="{% url 'users:address' %}">· 收货地址</a></li>
             </ul>
         </div>
-
         <div class="right_content clearfix">
             <div class="info_con clearfix">
                 <h3 class="common_title2">基本信息</h3>
@@ -27,15 +26,15 @@
             <div class="has_view_list">
                 <ul class="goods_type_list clearfix">
                     {% for sku in skus %}
-                        <li>
-                            <a href="detail.html"><img src="{{ sku.default_image.url }}"></a>
-                            <h4><a href="detail.html">{{ sku.name }}</a></h4>
-                            <div class="operate">
-                                <span class="prize">{{ sku.price }}</span>
-                                <span class="unit">{{ sku.price }}/{{ sku.unit }}</span>
-                                <a href="#" class="add_goods" title="加入购物车"></a>
-                            </div>
-                        </li>
+                    <li>
+                        <a href="detail.html"><img src="{{ sku.default_image.url }}"></a>
+                        <h4><a href="detail.html">{{ sku.name }}</a></h4>
+                        <div class="operate">
+                            <span class="prize">{{ sku.price }}</span>
+                            <span class="unit">{{ sku.price }}/{{ sku.unit }}</span>
+                            <a href="#" class="add_goods" title="加入购物车"></a>
+                        </div>
+                    </li>
 
                     {% endfor %}
                 </ul>
