--- a/dailyfresh/templates/index_for_static.html
+++ b/dailyfresh/templates/index_for_static.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    {% load staticfiles %}
+	{% load staticfiles %}
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>天天生鲜-首页</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 	<script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/slide.js' %}"></script>
@@ -22,24 +22,24 @@
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="{% url 'users:user_center_info' %}">用户中心</a>
+					<a href="{% url 'users:info' %}">用户中心</a>
 					<span>|</span>
-					<a href="{% url 'carts:cart' %}">我的购物车</a>
+					<a href="{% url 'users:cart' %}">我的购物车</a>
 					<span>|</span>
-					<a href="{% url 'orders:order' %}">我的订单</a>
+					<a href="{% url 'users:order' %}">我的订单</a>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
+		<a href="{% url 'goods:index' %}" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
 		<div class="search_con fl">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>
 		<div class="guest_cart fr">
-			<a href="{% url 'carts:cart' %}" class="cart_name fl">我的购物车</a>
+			<a href="{% url 'users:cart' category.id 1 %}" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl" id="show_count">0</div>
 		</div>
 	</div>
@@ -59,16 +59,16 @@
 
 	<div class="center_con clearfix">
 		<ul class="subnav fl">
-            {% for category in categories %}
+			{% for category in categories %}
 			<li><a href="#model01" class="{{ category.logo }}">{{ category.name }}</a></li>
 			{% endfor %}
 		</ul>
 		<div class="slide fl">
 			<ul class="slide_pics">
-                {% for goods_banner in index_goods_banners %}
+				{% for goods_banner in index_goods_banners %}
 				<li><img src="{{ goods_banner.image.url }}" alt="幻灯片"></li>
 				{% endfor %}
-            </ul>
+			</ul>
 			<div class="prev"></div>
 			<div class="next"></div>
 			<ul class="points"></ul>
@@ -80,7 +80,7 @@
 		</div>
 	</div>
 
-    {% for category in categories %}
+	{% for category in categories %}
 	<div class="list_model">
 		<div class="list_title clearfix">
 			<h3 class="fl" id="model01">{{ category.name }}</h3>
@@ -94,19 +94,19 @@
 		</div>
 
 		<div class="goods_con clearfix">
-			<div class="goods_banner fl"><img src="images/banner01.jpg"></div>
+			<div class="goods_banner fl"><img src="{{ category.image.url }}"></div>
 			<ul class="goods_list fl">
-                {% for banner in category.image_banners %}
+				{% for banner in category.image_banners %}
 				<li>
 					<h4><a href="#">{{ banner.sku.name }}</a></h4>
-                    <a href="#"><img src="{{ banner.sku.default_image.url }}"></a>
-                    <div class="prize">¥ {{ banner.sku.price }}</div>
+					<a href="#"><img src="{{ banner.sku.default_image.url }}"></a>
+					<div class="prize">¥ {{ banner.sku.price }}</div>
 				</li>
-                {% endfor %}
+				{% endfor %}
 			</ul>
 		</div>
 	</div>
-    {% endfor %}
+	{% endfor %}
 
 
 	<div class="footer">
@@ -122,7 +122,7 @@
 		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
-	<script type="text/javascript" src="{% static 'js/slide.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/slideshow.js' %}"></script>
 	<script type="text/javascript">
 		BCSlideshow('focuspic');
 		var oFruit = document.getElementById('fruit_more');
