--- a/dailyfresh/templates/list.html
+++ b/dailyfresh/templates/list.html
@@ -1,19 +1,7 @@
 {% extends "base.html" %}
-{% load staticfiles %}
+
 {% block title %}天天生鲜-商品列表{% endblock %}
-{% block top %}
-	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
-		<div class="search_con fl">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>
-		<div class="guest_cart fr">
-			<a href="#" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl">1</div>
-		</div>
-	</div>
-{% endblock %}
+
 {% block body %}
 	<div class="navbar_con">
 		<div class="navbar clearfix">
@@ -21,16 +9,13 @@
 				<h1>全部商品分类</h1>	
 				<span></span>			
 				<ul class="subnav">
-					<li><a href="#" class="fruit">新鲜水果</a></li>
-					<li><a href="#" class="seafood">海鲜水产</a></li>
-					<li><a href="#" class="meet">猪牛羊肉</a></li>
-					<li><a href="#" class="egg">禽类蛋品</a></li>
-					<li><a href="#" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="#" class="ice">速冻食品</a></li>
+					{% for category in categories %}
+					<li><a href="{% url 'goods:list' category.id 1 %}" class="{{ category.logo }}">{{ category.name }}</a></li>
+					{% endfor %}
 				</ul>
 			</div>
 			<ul class="navlist fl">
-				<li><a href="">首页</a></li>
+				<li><a href="{% url 'goods:index' %}">首页</a></li>
 				<li class="interval">|</li>
 				<li><a href="">手机生鲜</a></li>
 				<li class="interval">|</li>
@@ -40,9 +25,9 @@
 	</div>
 
 	<div class="breadcrumb">
-		<a href="#">全部分类</a>
+		<a href="{% url 'goods:index' %}">全部分类</a>
 		<span>></span>
-		<a href="#">新鲜水果</a>
+		<a href="{% url 'goods:list' category.id 1%}">{{ category.name }}</a>
 	</div>
 
 	<div class="main_wrap clearfix">
@@ -50,174 +35,54 @@
 			<div class="new_goods">
 				<h3>新品推荐</h3>
 				<ul>
+					{% for sku in new_skus %}
 					<li>
-						<a href="#"><img src="{% static 'images/goods/goods001.jpg' %}"></a>
-						<h4><a href="#">进口柠檬</a></h4>
-						<div class="prize">￥3.90</div>
+						<a href="{% url 'goods:detail' sku.id %}"><img src="{{ sku.default_image.url}}"></a>
+						<h4><a href="{% url 'goods:detail' sku.id %}">{{ sku.name }}</a></h4>
+						<div class="prize">￥{{sku.price}}</div>
 					</li>
-					<li>
-						<a href="#"><img src="{% static 'images/goods/goods002.jpg' %}"></a>
-						<h4><a href="#">玫瑰香葡萄</a></h4>
-						<div class="prize">￥16.80</div>
-					</li>
+					{% endfor %}
 				</ul>
 			</div>
 		</div>
 
 		<div class="r_wrap fr clearfix">
 			<div class="sort_bar">
-				<a href="#" class="active">默认</a>
-				<a href="#">价格</a>
-				<a href="#">人气</a>
+				<a href="{% url 'goods:list' category.id 1 %}" {% if sort == "default" %}class="active"{% endif %}>默认</a>
+				<a href="{% url 'goods:list' category.id 1 %}?sort=price" {% if sort == "price" %}class="active"{% endif %}>价格</a>
+				<a href="{% url 'goods:list' category.id 1 %}?sort=hot" {% if sort == "hot" %}class="active"{% endif %}>人气</a>
 			</div>
 
 			<ul class="goods_type_list clearfix">
+				{% for sku in page_skus %}
 				<li>
-					<a href="detail.html"><img src="{% static 'images/goods/goods003.jpg' %}"></a>
-					<h4><a href="detail.html">大兴大棚草莓</a></h4>
+					<a href="{% url 'goods:detail' sku.id %}"><img src="{{ sku.default_image.url }}"></a>
+					<h4><a href="{% url 'goods:detail' sku.id %}">{{ sku.name }}</a></h4>
 					<div class="operate">
-						<span class="prize">￥16.80</span>
-						<span class="unit">16.80/500g</span>
+						<span class="prize">￥{{ sku.price }}</span>
+						<span class="unit">{{ sku.price }}/{{ sku.unit }}</span>
 						<a href="#" class="add_goods" title="加入购物车"></a>
 					</div>
 				</li>
+				{% endfor %}
 
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods004.jpg' %}"></a>
-					<h4><a href="#">吐鲁番梨光杏</a></h4>
-					<div class="operate">
-						<span class="prize">￥5.50</span>
-						<span class="unit">5.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods005.jpg' %}"></a>
-					<h4><a href="#">黄肉桃</a></h4>
-					<div class="operate">
-						<span class="prize">￥10.00</span>
-						<span class="unit">10.00/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods006.jpg' %}"></a>
-					<h4><a href="#">进口西梅</a></h4>
-					<div class="operate">
-						<span class="prize">￥28.80</span>
-						<span class="unit">28.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods007.jpg' %}"></a>
-					<h4><a href="#">香梨</a></h4>
-					<div class="operate">
-						<span class="prize">￥6.45</span>
-						<span class="unit">6.45/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods008.jpg' %}"></a>
-					<h4><a href="#">栗子</a></h4>
-					<div class="operate">
-						<span class="prize">￥9.50</span>
-						<span class="unit">9.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods009.jpg' %}"></a>
-					<h4><a href="#">海南香蕉</a></h4>
-					<div class="operate">
-						<span class="prize">￥3.30</span>
-						<span class="unit">3.30/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods010.jpg' %}"></a>
-					<h4><a href="#">青苹果</a></h4>
-					<div class="operate">
-						<span class="prize">￥5.00</span>
-						<span class="unit">5.00/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods011.jpg' %}"></a>
-					<h4><a href="#">山莓</a></h4>
-					<div class="operate">
-						<span class="prize">￥28.80</span>
-						<span class="unit">28.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods012.jpg' %}"></a>
-					<h4><a href="#">奇异果</a></h4>
-					<div class="operate">
-						<span class="prize">￥25.80</span>
-						<span class="unit">25.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods013.jpg' %}"></a>
-					<h4><a href="#">蜜桔</a></h4>
-					<div class="operate">
-						<span class="prize">￥4.80</span>
-						<span class="unit">4.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods014.jpg' %}"></a>
-					<h4><a href="#">脐橙</a></h4>
-					<div class="operate">
-						<span class="prize">￥3.50</span>
-						<span class="unit">3.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods001.jpg' %}"></a>
-					<h4><a href="#">进口柠檬</a></h4>
-					<div class="operate">
-						<span class="prize">￥3.90</span>
-						<span class="unit">3.90/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="{% static 'images/goods/goods002.jpg' %}"></a>
-					<h4><a href="#">玫瑰香葡萄</a></h4>
-					<div class="operate">
-						<span class="prize">￥16.80</span>
-						<span class="unit">16.80/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
 			</ul>
 
 			<div class="pagenation">
-				<a href="#"><上一页</a>
-				<a href="#" class="active">1</a>
-				<a href="#">2</a>
-				<a href="#">3</a>
-				<a href="#">4</a>
-				<a href="#">5</a>
-				<a href="#">下一页></a>
+				{% if page_skus.has_previous %}
+				<a href="{% url 'goods:list' category.id page_skus.previous_page_number %}?sort={{ sort }}">&lt;上一页</a>
+				{% endif %}
+
+				{% for num in page_nums %}
+				<a href="{% url 'goods:list' category.id num %}?sort={{ sort }}" {% if num == page_skus.number %}class="active"{% endif %}>{{ num }}</a>
+				{% endfor %}
+
+
+				{% if page_skus.has_next %}
+				<a href="{% url 'goods:list' category.id page_skus.next_page_number %}?sort={{ sort }}"&gt;下一页></a>
+                {% endif %}
 			</div>
 		</div>
 	</div>
+
 {% endblock %}
