--- a/dailyfresh/static/css/main.css
+++ b/dailyfresh/static/css/main.css
@@ -17,17 +17,19 @@ html,body{height:100%}
 	line-height:29px;
 }
 
+
 .login_info{
-	display:none;
+	display:inline-block;
 }
 
 .login_info em{color:#ff8800}
 
-.login_btn a,.user_link a{
+.welcome a,.login_btn a,.user_link a{
 	color:#666;
 }
 
-.login_btn a:hover,.user_link a:hover{
+
+.welcom a:hover .login_btn a:hover,.user_link a:hover{
 	color:#ff8800;
 }
 
