--- a/dailyfresh/templates/base.html
+++ b/dailyfresh/templates/base.html
@@ -50,7 +50,7 @@
 			</form>
 		</div>
 		<div class="guest_cart fr">
-			<a href="{% url 'users:cart' %}" class="cart_name fl">我的购物车</a>
+			<a href="{% url 'carts:info' %}" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl" id="show_count">{{ cart_num }}</div>
 		</div>
 	</div>
