--- a/dailyfresh/templates/user_center_order.html
+++ b/dailyfresh/templates/user_center_order.html
@@ -6,7 +6,7 @@
             <h3>用户中心</h3>
             <ul>
                 <li><a href="{% url 'users:info' %}">· 个人信息</a></li>
-                <li><a href="{% url 'users:order' %}" class="active">· 全部订单</a></li>
+                <li><a href="{% url 'orders:order' %}" class="active">· 全部订单</a></li>
                 <li><a href="{% url 'users:address' %}">· 收货地址</a></li>
             </ul>
         </div>
